[project]
name = "mcp-pooler"
version = "0.1.0"
description = "A caching connection pooler in front of an aggregating MCP gateway (e.g. MetaMCP)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Felipe Fontoura" }]
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "metamcp", "proxy", "cache", "gateway"]
dependencies = [
    "mcp>=1.13",
    "uvicorn>=0.30",
    "starlette>=0.37",
]

[project.urls]
Homepage = "https://github.com/felipefontoura/mcp-pooler"
Repository = "https://github.com/felipefontoura/mcp-pooler"
Issues = "https://github.com/felipefontoura/mcp-pooler/issues"

[project.scripts]
mcp-pooler = "pooler:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["pooler.py"]

[tool.hatch.build.targets.wheel.sources]
"pooler.py" = "pooler.py"
